# ecitizen

./: .gitignore  DATA_CONTRACT.md  DEPLOY.md  DESIGN.md  MANUAL.md  NOTICE.md  README.md  build_data.py  deploy.py  generate.py  requirements.txt  secrets.json.example
.claude/: launch.json
.zed/: tasks.json
assets/css/: site.css
assets/js/: site.js
citizenlib/: census2010.py  charts.py  estat.py  eurostat.py  filters.py  ipss.py  masters.py  municipal.py  population.py  rankings.py
data/: cpi.json
data/masters/: ages.json  ages2.json  ages3.json  citydic20161010.json  codetrans20140401.json  codetrans20151001.json  countrycode.json  municipal_changes.json  prefcode.json
data/ssds/: majors.json
docs/: DATA_CONTRACT.md  DEPLOY.md  DESIGN.md  MANUAL.md  STATUS.md
statdb_app/: README.md  pubspec.yaml
statdb_app/lib/: chart_svg.dart  data.dart  main.dart
statdb_app/linux/: CMakeLists.txt
statdb_app/test/: chart_svg_render_test.dart  widget_test.dart
statdb_app/web/: index.html  manifest.json
statdb_app/windows/: CMakeLists.txt
statdb_flet/: main.py  pyproject.toml  statdb_data.py  test_views.py
statdb_flet/assets/fonts/: KleeOne-LICENSE.txt
templates/: 404.html  _layout.html  home.html  sac.html  static_page.html
templates/lc/: mame.html
templates/living/: cpi.html
templates/partials/: _cityinfo2015.html  _mainnav.html
templates/population/: census2010.html  (+16 more)
tools/: README.md  extract_masters.py  fetch_cpi.py  fetch_eurostat.py  fetch_ipss.py  fetch_ons.py  fetch_sac_lod.py  fetch_ssds.py  fetch_statdb.py  find_2020_census_table.py
(+17394 files in other folders)
